--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Welcome to Sergio López-Sancio's personal webpage.
+description: Please feel free to navigate this page to find out mroe about my research.
