--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Welcome to Sergio López-Sancio's personal webpage.
-description: Please feel free to navigate this page to find out mroe about my research.
+title: Sergio López-Sancio
+description: I am a PhD candidate in Psycholinguistics at the University of the Basque Country (UPV/EHU).
