--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-slate
 title: Sergio López-Sancio
 description: I am a PhD candidate in Psycholinguistics at the University of the Basque Country (UPV/EHU).
-logo: /img/profile.jpg
 show_downloads: false
