--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-minimal
 title: Sergio López-Sancio
 description: I am a PhD candidate in Psycholinguistics at the University of the Basque Country (UPV/EHU).
