--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
-title: Your awesome title
+title: Sergio López-Sancio
 author: GitHub User
 email: your-email@domain.com
 description: > # this means to ignore newlines until "twitter_username:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I am a PhD candidate in Psycholinguistics at the University of the Basque Country (UPV/EHU).
 # social links
-twitter_username: jekyllrb
-github_username:  jekyll
-rss: rss
+twitter_username: serlosan
+github_username:  serlosan
+# rss: rss
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
@@ -35,8 +33,8 @@ minima:
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
-#header_pages:
-# - about.html
+header_pages:
+ about.html
 
 # Build settings
 theme: minima
