--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Sergio López-Sancio
-author: GitHub User
-email: your-email@domain.com
+# author: GitHub User
+email: sergio.lopez-sancio@ehu.eus
 description: > # this means to ignore newlines until "twitter_username:"
   I am a PhD candidate in Psycholinguistics at the University of the Basque Country (UPV/EHU).
 # social links
