--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ title: Sergio López-Sancio
 # author: GitHub User
 email: sergio.lopez-sancio@ehu.eus
 description: > # this means to ignore newlines until "twitter_username:"
-  I am a PhD candidate in Psycholinguistics at the University of the Basque Country (UPV/EHU).
+   Centro de Investigación Micaela Portilla Ikergunea, Office 3.2
+   Justo Vélez de Elorriaga, 1. 01006 Vitoria-Gasteiz
 # social links
 twitter_username: serlosan
 github_username:  serlosan
