--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Sergio López-Sancio
 # author: GitHub User
 email: sergio.lopez-sancio@ehu.eus
 description: > # this means to ignore newlines until "twitter_username:"
-   Centro de Investigación Micaela Portilla Ikergunea, Office 3.2 //
+   Centro de Investigación Micaela Portilla Ikergunea, Office 3.2 |
    Justo Vélez de Elorriaga, 1. 01006 Vitoria-Gasteiz
 # social links
 twitter_username: serlosan
