--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ description: > # this means to ignore newlines until "twitter_username:"
 # social links
 twitter_username: serlosan
 github_username:  serlosan
+academia_username: serlosan
 # rss: rss
 # dribbble_username: jekyll
 # facebook_username: jekyll
