--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,9 @@ minima:
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
 # header_pages:
-# index.html
+index.md
+p02_research.md
+p01_cv.md
 
 # Build settings
 theme: minima
