--- a/_config.yml
+++ b/_config.yml
@@ -36,9 +36,7 @@ minima:
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
 # header_pages:
-index.md
-p02_research.md
-p01_cv.md
+# index.md
 
 # Build settings
 theme: minima
